updated swagger added checks for config
