# internal/handlers/prefixeshandler/prefixes_handler.go
@@ -29,31 +29,89 @@ func RegisterPrefix(ginContext *gin.Context) {
 	err := ginContext.ShouldBindJSON(&prefixRequest)
 
 	if err != nil {
-		ginContext.JSON(http.StatusBadRequest, gin.H{"error": "Could not parse incomming request"})
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": "Could not parse incomming request"})
+		return
+	}
+
+	if prefixRequest.Prefix != "" {
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": "For updating a prefix, use the PUT method"})
 		return
 	}
 
 	if !prefixRequest.IsValidZone() {
-		ginContext.JSON(http.StatusBadRequest, gin.H{"error": "Invalid zone"})
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": "Invalid zone"})
 		return
 	}
 
 	if prefixRequest.Zone == "" || prefixRequest.Secret == "" {
-		ginContext.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request. Both 'zone' and 'secret' are required"})
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": "Invalid request. Both 'zone' and 'secret' are required"})
 		return
 	}
 
 	err = validate.Struct(prefixRequest)
 
 	if err != nil {
-		ginContext.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request: " + err.Error()})
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": "Invalid request: " + err.Error()})
 		return
 	}
 
 	response, err := prefixesservice.Register(prefixRequest)
 
 	if err != nil {
-		ginContext.JSON(http.StatusTeapot, gin.H{"error": err.Error()})
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": err.Error()})
+		return
+	}
+
+	ginContext.JSON(http.StatusOK, response)
+
+}
+
+// RegisterPrefix godoc
+// @Summary      Update a prefix
+// @Schemes
+// @Description  Register a prefix
+// @Tags         prefixes
+// @Accept       json
+// @Produce      json
+// @Success		 200 {object} apicontracts.K8sRequestResponse
+// @Param		 body body apicontracts.K8sRequestBody true "Request body"
+// @Failure      400 {object} apicontracts.HTTPError
+// @Failure      404 {object} apicontracts.HTTPError
+// @Failure      500 {object} apicontracts.HTTPError
+// @Router       /prefixes [PATCH]
+// @Router       /prefixes [PUT]
+func UpdatePrefix(ginContext *gin.Context) {
+	var prefixRequest apicontracts.K8sRequestBody
+	validate := validator.New()
+
+	err := ginContext.ShouldBindJSON(&prefixRequest)
+
+	if err != nil {
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": "Could not parse incomming request"})
+		return
+	}
+
+	if !prefixRequest.IsValidZone() {
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": "Invalid zone"})
+		return
+	}
+
+	if prefixRequest.Zone == "" || prefixRequest.Secret == "" || prefixRequest.Prefix == "" {
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": "Invalid request. 'zone', 'secret' and 'prefix' are required for update"})
+		return
+	}
+
+	err = validate.Struct(prefixRequest)
+
+	if err != nil {
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": "Invalid request: " + err.Error()})
+		return
+	}
+
+	response, err := prefixesservice.Register(prefixRequest)
+
+	if err != nil {
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": err.Error()})
 		return
 	}
 
@@ -68,6 +126,10 @@ func RegisterPrefix(ginContext *gin.Context) {
 // @Tags         prefixes
 // @Accept       json
 // @Produce      json
+// @Param		 body body apicontracts.K8sRequestBody true "Request body"
+// @Failure      400 {object} apicontracts.HTTPError
+// @Failure      404 {object} apicontracts.HTTPError
+// @Failure      500 {object} apicontracts.HTTPError
 // @Router       /prefixes [DELETE]
 func DeregisterPrefix(ginContext *gin.Context) {
 	var prefixRequest apicontracts.K8sRequestBody
@@ -76,31 +138,31 @@ func DeregisterPrefix(ginContext *gin.Context) {
 	err := ginContext.ShouldBindJSON(&prefixRequest)
 
 	if err != nil {
-		ginContext.JSON(http.StatusBadRequest, gin.H{"error": "Could not parse incomming request"})
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": "Could not parse incomming request"})
 		return
 	}
 
 	if !prefixRequest.IsValidZone() {
-		ginContext.JSON(http.StatusBadRequest, gin.H{"error": "Invalid zone"})
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": "Invalid zone"})
 		return
 	}
 
 	if prefixRequest.Zone == "" || prefixRequest.Secret == "" {
-		ginContext.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request. Both 'zone' and 'secret' are required"})
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": "Invalid request. Both 'zone' and 'secret' are required"})
 		return
 	}
 
 	err = validate.Struct(prefixRequest)
 
 	if err != nil {
-		ginContext.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request: " + err.Error()})
+		ginContext.JSON(http.StatusBadRequest, gin.H{"message": "Invalid request: " + err.Error()})
 		return
 	}
 
 	response, err := prefixesservice.Deregister(prefixRequest)
 
 	if err != nil {
-		ginContext.JSON(http.StatusBadRequest, apicontracts.HTTPError{Code: http.StatusTeapot, Message: err.Error()})
+		ginContext.JSON(http.StatusNotFound, gin.H{"message": "Could not deregister service: " + err.Error()})
 		return
 	}
 
